5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1596_1571.log
== TEST (2019-03-24 18:17:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(o rato roeu a roupa do rei de roma.upper())

-- ERROR:
File "XXXX", line 4
    print(o rato roeu a roupa do rei de roma.upper())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:17:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print("o rato roeu a roupa do rei de roma".upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:17:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print("o rato roeu a roupa do rei de roma".upper())

-- EXECUTION TIME:
0.127093
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:18:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print("o rato roeu a roupa do rei de roma".upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:19:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print("o rato roeu a roupa do rei de roma".upper())

-- EXECUTION TIME:
0.198116
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:20:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print("O rato roeu a roupa do rei de Roma".upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:20:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print("O rato roeu a roupa do rei de Roma".upper())

-- EXECUTION TIME:
0.150808
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:21:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto="O rato roeu a roupa do rei de Roma"
print("O rato roeu a roupa do rei de Roma".upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:22:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto="O rato roeu a roupa do rei de Roma"
print("O rato roeu a roupa do rei de Roma".upper())

-- EXECUTION TIME:
0.210906
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:22:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = "O rato roeu a roupa do rei de Roma"
print("O rato roeu a roupa do rei de Roma".upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:22:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = "O rato roeu a roupa do rei de Roma"
print("O rato roeu a roupa do rei de Roma".upper())

-- EXECUTION TIME:
0.15812
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:24:17) 
-- CODE:
texto = "O rato roeu a roupa do rei de Roma"
print("O rato roeu a roupa do rei de Roma".upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:24:18) 
-- CODE:
texto = "O rato roeu a roupa do rei de Roma"
print("O rato roeu a roupa do rei de Roma".upper())

-- EXECUTION TIME:
0.15993
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:24:33) 
-- CODE:
texto = "O rato roeu a roupa do rei de roma"
print("O rato roeu a roupa do rei de Roma".upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:24:35) 
-- CODE:
texto = "O rato roeu a roupa do rei de roma"
print("O rato roeu a roupa do rei de Roma".upper())

-- EXECUTION TIME:
0.1998
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:24:58) 
-- CODE:
texto = "O rato roeu a roupa do rei de roma"
print(texto.upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:25:00) 
-- CODE:
texto = "O rato roeu a roupa do rei de roma"
print(texto.upper())

-- EXECUTION TIME:
0.151925
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:25:08) 
-- CODE:
texto = "o rato roeu a roupa do rei de roma"
print(texto.upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:25:11) 
-- CODE:
texto = "o rato roeu a roupa do rei de roma"
print(texto.upper())

-- EXECUTION TIME:
0.15453
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:25:31) 
-- CODE:
texto = "o rato roeu a roupa do rei de roma"
print(texto.upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:25:34) 
-- CODE:
texto = "o rato roeu a roupa do rei de roma"
print(texto.upper())

-- EXECUTION TIME:
0.137721
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:26:29) 
-- CODE:
texto = ("o rato roeu a roupa do rei de roma".upper())
print(texto.upper())

-- OUTPUT:
O RATO ROEU A ROUPA DO REI DE ROMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:26:30) 
-- CODE:
texto = ("o rato roeu a roupa do rei de roma".upper())
print(texto.upper())

-- EXECUTION TIME:
0.160351
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
O RATO ROEU A ROUPA DO REI DE ROMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:27:20) 
-- CODE:
texto="Selina Kyle"
print(texto.upper())

-- OUTPUT:
SELINA KYLE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:27:22) 
-- CODE:
texto="Selina Kyle"
print(texto.upper())

-- EXECUTION TIME:
0.152875
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
SELINA KYLE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:03:26) 
-- CODE:
texto = input("Digite algo: ")
print(texto.upper())


-- EXECUTION TIME:
0.150909
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
